# isoxya-plugin-spellchecker

./: .dockerrepo  .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  LICENSE.dependencies.txt  README.md  cabal.config  cabal.project.freeze  docker-compose.yml  docker-compose.yml.example  isoxya-plugin-spellchecker.cabal  isx-pick-spellchecker.cabal  isx-plug-spellchecker.cabal  isx-plugin-spellchecker.cabal
ci/: Dockerfile  test.yml
misc/streams/stable/: docker-compose.yml
misc/streams/testing/: docker-compose.yml
misc/streams/unstable/: docker-compose.yml
pkg/: Dockerfile
src/ISX/Pick/Spellchecker/: Checker.hs  Parser.hs  Route.hs
src/ISX/Pick/Spellchecker/Resource/: Common.hs
src/ISX/Pick/Spellchecker/Zone/Common/: Apex.hs  Data.hs
src/ISX/Plug/: Spellchecker.hs
src/ISX/Plug/Spellchecker/: Checker.hs  Core.hs  Init.hs  Parser.hs  Resource.hs  Route.hs  Types.hs
src/ISX/Plug/Spellchecker/Resource/: Common.hs
src/ISX/Plug/Spellchecker/Zone/: Apex.hs  Data.hs
src/ISX/Plug/Spellchecker/Zone/Common/: Apex.hs  Data.hs
src/ISX/Plugin/Spellchecker/: Checker.hs  Parser.hs  Route.hs
src/ISX/Plugin/Spellchecker/Resource/: Common.hs
src/ISX/Plugin/Spellchecker/Zone/Common/: Apex.hs  Data.hs
src/Isoxya/Plugin/: Spellchecker.hs
src/Isoxya/Plugin/Spellchecker/: Checker.hs  Core.hs  Init.hs  Parser.hs  Resource.hs  Type.hs  Types.hs
src/Isoxya/Plugin/Spellchecker/Endpoint/: Apex.hs  Data.hs
test/ISX/: Factory.hs  Test.hs
test/ISX/Pick/Spellchecker/: CheckerSpec.hs  ParserSpec.hs
test/ISX/Pick/Spellchecker/Zone/Common/: ApexSpec.hs  DataSpec.hs
test/ISX/Plug/Spellchecker/: CheckerSpec.hs  ParserSpec.hs  Test.hs
test/ISX/Plug/Spellchecker/Zone/: ApexSpec.hs  DataSpec.hs
test/ISX/Plug/Spellchecker/Zone/Common/: ApexSpec.hs  DataSpec.hs
test/ISX/Plugin/Spellchecker/: CheckerSpec.hs  ParserSpec.hs
test/ISX/Plugin/Spellchecker/Zone/Common/: ApexSpec.hs  DataSpec.hs
test/Isoxya/Plugin/Spellchecker/: CheckerSpec.hs  ParserSpec.hs  Test.hs
test/Isoxya/Plugin/Spellchecker/Endpoint/: ApexSpec.hs  DataSpec.hs
test/fixture/pages/_test/cs/: index.html
test/fixture/pages/_test/de/: index.html
test/fixture/pages/_test/en/: index.html
test/fixture/pages/_test/es/: index.html
test/fixture/pages/_test/et/: index.html
test/fixture/pages/_test/fr/: index.html
test/fixture/pages/_test/nl/: index.html
test/fixture/pages/www.pavouk.tech/: index.html
test/fixture/pages/www.tiredpixel.com/: index.html
test/fixture/results/cs/_test/cs/: index.html.json
test/fixture/results/de/_test/de/: index.html.json
test/fixture/results/default/www.pavouk.tech/: index.html.json
test/fixture/results/en/_test/en/: index.html.json
test/fixture/results/es/_test/es/: index.html.json
test/fixture/results/et/_test/et/: index.html.json
test/fixture/results/fr/_test/fr/: index.html.json
test/fixture/results/multi/www.pavouk.tech/: index.html.json
test/fixture/results/nl/_test/nl/: index.html.json
test/fixture/results/www.pavouk.tech/: index.html.json
test/fixture/texts/example.com/: index.html.txt
test/fixture/texts/www.pavouk.tech/: index.html.txt
test/fixture/texts/www.tiredpixel.com/: index.html.txt
