cabal-version:          3.0
name:                   isoxya-plugin-spellchecker
version:                0.0.0
synopsis:               Isoxya Spellchecker plugin
license:                BSD-3-Clause
author:                 Nic Williams <tp@tiredpixel.com>
maintainer:             Nic Williams <tp@tiredpixel.com>
build-type:             Simple
--------------------------------------------------------------------------------
common common-properties
    build-depends:
        base                            ==  4.13.*,
        relude
    mixins:
        base                            hiding (Prelude),
        relude                          (Relude as Prelude)
    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings
    ghc-options:
        -Wall
        -ddump-minimal-imports
--------------------------------------------------------------------------------
library lib-common
    import:             common-properties
    exposed-modules:
        TiredPixel.Common.Isoxya.PlugProc
        TiredPixel.Common.Isoxya.Snap.PlugProc
        TiredPixel.Common.Snap.CoreUtils
        TiredPixel.Common.Snap.Main
        TiredPixel.Common.URI
    other-modules:
        TiredPixel.Common.Cursor
    build-depends:
        aeson,
        base64-bytestring,
        bytestring,
        http-conduit,
        network-uri,
        regex-compat,
        safe,
        snap-core,
        snap-extras,
        snap-server,
        time,
        unix,
        unordered-containers,
    hs-source-dirs:
        lib/common/src
--------------------------------------------------------------------------------
library lib-isoxya-plugin-spellchecker
    import:             common-properties
    exposed-modules:
        Isoxya.Plugin.Spellchecker
        Isoxya.Plugin.Spellchecker.Core
    other-modules:
        Paths_isoxya_plugin_spellchecker
        --
        Isoxya.Plugin.Spellchecker.Checker
        Isoxya.Plugin.Spellchecker.Init
        Isoxya.Plugin.Spellchecker.Parser
        Isoxya.Plugin.Spellchecker.Resource
        Isoxya.Plugin.Spellchecker.Types
        Isoxya.Plugin.Spellchecker.Zone.Apex
        Isoxya.Plugin.Spellchecker.Zone.Data
    build-depends:
        lib-common,
        --
        aeson,
        containers,
        hxt,
        lens,
        process-extras,
        snap,
        snap-core,
        snap-extras,
        text,
        time,
    hs-source-dirs:
        src
--------------------------------------------------------------------------------
executable isoxya-plugin-spellchecker
    import:             common-properties
    main-is:            Spellchecker.hs
    other-modules:
        Paths_isoxya_plugin_spellchecker
    build-depends:
        lib-common,
        lib-isoxya-plugin-spellchecker,
        --
        lens,
        snap,
    hs-source-dirs:
        src/Isoxya/Plugin/Bin
--------------------------------------------------------------------------------
library lib-common-test
    import:             common-properties
    exposed-modules:
        TiredPixel.Common.Snap.Test
    other-modules:
        TiredPixel.Common.Snap.TestUtils
    build-depends:
        lib-common,
        --
        aeson,
        base64-bytestring,
        bytestring,
        containers,
        directory,
        filepath,
        hspec                           ==  2.*,
        hspec-core,
        hspec-snap,
        http-link-header,
        lens,
        lens-aeson,
        mtl,
        network-uri,
        process,
        snap-core,
        text,
        unordered-containers,
        vector,
    hs-source-dirs:
        lib/common/test
--------------------------------------------------------------------------------
test-suite test-isoxya-plugin-spellchecker
    import:             common-properties
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    other-modules:
        Isoxya.Plugin.Spellchecker.CheckerSpec
        Isoxya.Plugin.Spellchecker.ParserSpec
        Isoxya.Plugin.Spellchecker.Test
        Isoxya.Plugin.Spellchecker.Zone.ApexSpec
        Isoxya.Plugin.Spellchecker.Zone.DataSpec
    build-depends:
        lib-common,
        lib-common-test,
        lib-isoxya-plugin-spellchecker,
        --
        containers,
        hspec                           ==  2.*,
        network-uri,
        text,
    default-extensions:
        NoImplicitPrelude
    hs-source-dirs:
        test
    build-tool-depends:
        hspec-discover:hspec-discover   ==  2.*
