cabal-version:          3.0
name:                   isoxya-plugin-spellchecker
version:                0.0.0
synopsis:               Isoxya plugin Spellchecker
license:                BSD-3-Clause
author:                 Nic Williams <tp@tiredpixel.com>
maintainer:             Nic Williams <tp@tiredpixel.com>
--------------------------------------------------------------------------------
common common-properties
    build-depends:
        base                            ^>= 4.14.3.0,
        relude
    mixins:
        base                            hiding (Prelude),
        relude                          (Relude as Prelude)
    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings
    ghc-options:
        -Wall
        -Werror
        -Wunused-packages
--------------------------------------------------------------------------------
library lib-common
    import:             common-properties
    exposed-modules:
        TiredPixel.Common.Isoxya.Processor
        TiredPixel.Common.Isoxya.Snap.Processor
        TiredPixel.Common.Snap.CoreUtil
        TiredPixel.Common.Snap.Main
        TiredPixel.Common.URI
    other-modules:
        TiredPixel.Common.Cursor
    build-depends:
        aeson,
        base64-bytestring,
        bytestring,
        http-conduit,
        network-uri,
        regex-compat,
        safe,
        snap-core,
        snap-extras,
        snap-server,
        time,
        unix,
        unordered-containers,
    hs-source-dirs:
        lib/common/src
--------------------------------------------------------------------------------
library lib-isoxya-plugin-spellchecker
    import:             common-properties
    exposed-modules:
        Isoxya.Plugin.Spellchecker
        Isoxya.Plugin.Spellchecker.Core
    other-modules:
        Isoxya.Plugin.Spellchecker.Checker
        Isoxya.Plugin.Spellchecker.Endpoint.Apex
        Isoxya.Plugin.Spellchecker.Endpoint.Data
        Isoxya.Plugin.Spellchecker.Init
        Isoxya.Plugin.Spellchecker.Parser
        Isoxya.Plugin.Spellchecker.Resource
        Isoxya.Plugin.Spellchecker.Type
        Paths_isoxya_plugin_spellchecker
    build-depends:
        aeson,
        containers,
        hxt,
        lens,
        lib-common,
        process-extras,
        snap,
        snap-core,
        snap-extras,
        text,
        time,
    hs-source-dirs:
        src
--------------------------------------------------------------------------------
executable isoxya-plugin-spellchecker
    import:             common-properties
    main-is:            Spellchecker.hs
    other-modules:
        Paths_isoxya_plugin_spellchecker
    build-depends:
        lens,
        lib-common,
        lib-isoxya-plugin-spellchecker,
        snap,
    hs-source-dirs:
        src/Isoxya/Plugin/Bin
--------------------------------------------------------------------------------
library lib-common-test
    import:             common-properties
    exposed-modules:
        TiredPixel.Common.Snap.Test
    other-modules:
        TiredPixel.Common.Snap.TestUtil
    build-depends:
        aeson,
        base64-bytestring,
        bytestring,
        containers,
        directory,
        filepath,
        hspec                           ==  2.*,
        hspec-core,
        hspec-snap,
        http-link-header,
        lens,
        lens-aeson,
        mtl,
        network-uri,
        process,
        snap-core,
        text,
        unordered-containers,
        vector,
    hs-source-dirs:
        lib/common/test
--------------------------------------------------------------------------------
test-suite test-isoxya-plugin-spellchecker
    import:             common-properties
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    other-modules:
        Isoxya.Plugin.Spellchecker.CheckerSpec
        Isoxya.Plugin.Spellchecker.Endpoint.ApexSpec
        Isoxya.Plugin.Spellchecker.Endpoint.DataSpec
        Isoxya.Plugin.Spellchecker.ParserSpec
        Isoxya.Plugin.Spellchecker.Test
    build-depends:
        containers,
        hspec                           ==  2.*,
        lib-common,
        lib-common-test,
        lib-isoxya-plugin-spellchecker,
        network-uri,
        stylish-haskell,
        text,
    default-extensions:
        NoImplicitPrelude
    hs-source-dirs:
        test
    ghc-options:
        -Wno-error=unused-packages
    build-tool-depends:
        hspec-discover:hspec-discover   ==  2.*
