cabal-version:          2.4
name:                   isx-pick-spellchecker
version:                1.0
synopsis:               Isoxya Pickax Spellchecker
license:                BSD-3-Clause
license-file:           LICENSE
author:                 Pavouk OÜ
maintainer:             en@pavouk.tech
build-type:             Simple
extra-source-files:     README.md
--------------------------------------------------------------------------------
library pvk-com
    exposed-modules:
        PVK.Com.API.Aeson
        PVK.Com.API.Ext.URI
        PVK.Com.API.Req
        PVK.Com.API.Res
        PVK.Com.API.Resource.CommonError
        PVK.Com.API.Resource.ISXPick
        PVK.Com.API.Resource.ISXPickSnap
        PVK.Com.API.Zone.Common.Error
    other-modules:
        Prelude
    build-depends:
        base-noprelude                  ==  4.12.*,
        relude,
        --
        aeson,
        base64-bytestring,
        network-uri,
        snap-core,
        snap-extras,
        unordered-containers,
        vector
    hs-source-dirs:
        lib/pvk-com/src
    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings
    ghc-options:
        -Wall

library isx-pick-spellchecker-int
    exposed-modules:
        ISX.Pick.Spellchecker.Checker
        ISX.Pick.Spellchecker.Parser
        ISX.Pick.Spellchecker.Route
        ISX.Pick.Spellchecker.Zone.Common.Apex
        ISX.Pick.Spellchecker.Zone.Common.Data
    other-modules:
        ISX.Pick.Spellchecker.Resource.Common
        Prelude
    build-depends:
        base-noprelude                  ==  4.12.*,
        relude,
        --
        pvk-com,
        --
        aeson,
        bytestring,
        containers,
        HandsomeSoup,
        hxt,
        process-extras,
        snap-core,
        snap-extras,
        text,
        time
    hs-source-dirs:
        src
    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings
    ghc-options:
        -Wall
--------------------------------------------------------------------------------
executable isx-pick-spellchecker
    main-is:            Main.hs
    other-modules:
        Prelude
    build-depends:
        base-noprelude                  ==  4.12.*,
        relude,
        --
        pvk-com,
        isx-pick-spellchecker-int,
        --
        snap-server
    hs-source-dirs:
        src/ISX/Pick/Spellchecker/Bin
    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings
    ghc-options:
        -Wall
        -threaded
--------------------------------------------------------------------------------
library pvk-com-test
    exposed-modules:
        PVK.Com.API.Test
    other-modules:
        Prelude
    build-depends:
        base-noprelude                  ==  4.12.*,
        relude,
        --
        hspec                           ==  2.*,
        --
        pvk-com,
        --
        aeson,
        base64-bytestring,
        bytestring,
        http-link-header,
        lens,
        lens-aeson,
        snap-core
    hs-source-dirs:
        lib/pvk-com/test
    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings
    ghc-options:
        -Wall

test-suite isx-pick-spellchecker-test
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    other-modules:
        ISX.Factory
        ISX.Pick.Spellchecker.CheckerSpec
        ISX.Pick.Spellchecker.ParserSpec
        ISX.Pick.Spellchecker.Zone.Common.ApexSpec
        ISX.Pick.Spellchecker.Zone.Common.DataSpec
        ISX.Test
        Prelude
    build-depends:
        base-noprelude                  ==  4.12.*,
        relude,
        --
        hlint                           ==  2.1.17,
        hspec                           ==  2.*,
        --
        isx-pick-spellchecker-int,
        pvk-com,
        pvk-com-test,
        --
        aeson,
        bytestring,
        containers,
        network-uri,
        text,
        vector
    hs-source-dirs:
        test
    build-tool-depends:
        hspec-discover:hspec-discover   ==  2.*
    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings
    ghc-options:
        -Wall
        -threaded
--------------------------------------------------------------------------------
