cabal-version:          2.4
name:                   isx-pick-spellchecker
version:                1.0
synopsis:               Isoxya Pickax Spellchecker
license:                BSD-3-Clause
license-file:           LICENSE
author:                 Pavouk OÜ
maintainer:             en@pavouk.tech
build-type:             Simple
extra-source-files:     README.md
--------------------------------------------------------------------------------
common shared-properties
    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings
    ghc-options:
        -Wall
        -ddump-minimal-imports
--------------------------------------------------------------------------------
library pvk-com
    import:             shared-properties
    exposed-modules:
        PVK.Com.API.Aeson
        PVK.Com.API.Ext.URI
        PVK.Com.API.Req
        PVK.Com.API.Res
        PVK.Com.API.Resource.CommonError
        PVK.Com.API.Resource.ISXPick
        PVK.Com.API.Resource.ISXPickSnap
        PVK.Com.API.Zone.Common.Error
    other-modules:
        Prelude
    build-depends:
        base-noprelude                  ==  4.12.*,
        relude,
        --
        aeson,
        base64-bytestring,
        network-uri,
        snap-core,
        snap-extras,
        unordered-containers,
        vector
    hs-source-dirs:
        lib/pvk-com/src

library isx-pick-spellchecker-int
    import:             shared-properties
    exposed-modules:
        ISX.Pick.Spellchecker.Checker
        ISX.Pick.Spellchecker.Parser
        ISX.Pick.Spellchecker.Route
        ISX.Pick.Spellchecker.Zone.Common.Apex
        ISX.Pick.Spellchecker.Zone.Common.Data
    other-modules:
        ISX.Pick.Spellchecker.Resource.Common
        Prelude
    build-depends:
        base-noprelude                  ==  4.12.*,
        relude,
        --
        pvk-com,
        --
        aeson,
        bytestring,
        containers,
        HandsomeSoup,
        hxt,
        process-extras,
        snap-core,
        snap-extras,
        text,
        time
    hs-source-dirs:
        src
--------------------------------------------------------------------------------
executable isx-pick-spellchecker
    import:             shared-properties
    main-is:            Main.hs
    other-modules:
        Prelude
    build-depends:
        base-noprelude                  ==  4.12.*,
        relude,
        --
        pvk-com,
        isx-pick-spellchecker-int,
        --
        snap-server
    hs-source-dirs:
        src/ISX/Pick/Spellchecker/Bin
    ghc-options:
        -threaded
--------------------------------------------------------------------------------
library pvk-com-test
    import:             shared-properties
    exposed-modules:
        PVK.Com.API.Test
    other-modules:
        Prelude
    build-depends:
        base-noprelude                  ==  4.12.*,
        relude,
        --
        pvk-com,
        --
        aeson,
        base64-bytestring,
        bytestring,
        http-link-header,
        hspec                           ==  2.*,
        lens,
        lens-aeson,
        snap-core
    hs-source-dirs:
        lib/pvk-com/test

test-suite isx-pick-spellchecker-test
    import:             shared-properties
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    other-modules:
        ISX.Factory
        ISX.Pick.Spellchecker.CheckerSpec
        ISX.Pick.Spellchecker.ParserSpec
        ISX.Pick.Spellchecker.Zone.Common.ApexSpec
        ISX.Pick.Spellchecker.Zone.Common.DataSpec
        ISX.Test
        Prelude
    build-depends:
        base-noprelude                  ==  4.12.*,
        relude,
        --
        isx-pick-spellchecker-int,
        pvk-com,
        pvk-com-test,
        --
        aeson,
        bytestring,
        containers,
        hspec                           ==  2.*,
        network-uri,
        text,
        vector
    hs-source-dirs:
        test
    build-tool-depends:
        hspec-discover:hspec-discover   ==  2.*
    ghc-options:
        -threaded
--------------------------------------------------------------------------------
