cabal-version:          3.0
name:                   isx-plug-spellchecker
version:                0.0.0
synopsis:               Isoxya plugin: Spellchecker
license:                BSD-3-Clause
author:                 Nic Williams <tp@tiredpixel.com>
maintainer:             Nic Williams <tp@tiredpixel.com>
build-type:             Simple
--------------------------------------------------------------------------------
common common-properties
    build-depends:
        base                            ==  4.13.*,
        relude
    mixins:
        base                            hiding (Prelude),
        relude                          (Relude as Prelude)
    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings
    ghc-options:
        -Wall
        -ddump-minimal-imports
--------------------------------------------------------------------------------
library lib-isx-plug-spellchecker
    import:             common-properties
    exposed-modules:
        ISX.Plug.Spellchecker.Checker
        ISX.Plug.Spellchecker.Parser
        ISX.Plug.Spellchecker.Route
        TPX.Com.API.Aeson
        TPX.Com.API.Res
        TPX.Com.ISX.PlugProc
        TPX.Com.URI
    other-modules:
        ISX.Plug.Spellchecker.Resource
        ISX.Plug.Spellchecker.Zone.Apex
        ISX.Plug.Spellchecker.Zone.Data
        Paths_isx_plug_spellchecker
        TPX.Com.API.Req
        TPX.Com.API.Resource
        TPX.Com.ISX.PlugProcSnap
    build-depends:
        aeson,
        base64-bytestring,
        containers,
        hxt,
        network-uri,
        process-extras,
        snap-core,
        snap-extras,
        text,
        time,
        unix,
        unordered-containers,
    hs-source-dirs:
        lib/common-ce/src
        src
--------------------------------------------------------------------------------
executable isx-plug-spellchecker
    import:             common-properties
    main-is:            Spellchecker.hs
    other-modules:
        Paths_isx_plug_spellchecker
    build-depends:
        lib-isx-plug-spellchecker,
        --
        snap-server,
    hs-source-dirs:
        src/ISX/Plug/Bin
    ghc-options:
        -threaded
--------------------------------------------------------------------------------
library common-ce-test
    import:             common-properties
    exposed-modules:
        TPX.Com.API.Test
    build-depends:
        lib-isx-plug-spellchecker,
        --
        aeson,
        base64-bytestring,
        bytestring,
        containers,
        directory,
        filepath,
        hspec                           ==  2.*,
        hspec-core,
        hspec-snap,
        http-link-header,
        lens,
        lens-aeson,
        mtl,
        network-uri,
        process,
        snap-core,
        text,
        unordered-containers,
    mixins:
        relude                          (Relude.Unsafe)
    hs-source-dirs:
        lib/common-ce/test
--------------------------------------------------------------------------------
test-suite test-isx-plug-spellchecker
    import:             common-properties
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    other-modules:
        ISX.Factory
        ISX.Plug.Spellchecker.CheckerSpec
        ISX.Plug.Spellchecker.ParserSpec
        ISX.Plug.Spellchecker.Zone.ApexSpec
        ISX.Plug.Spellchecker.Zone.DataSpec
        ISX.Test
    build-depends:
        common-ce-test,
        lib-isx-plug-spellchecker,
        --
        base64-bytestring,
        directory,
        hspec                           ==  2.*,
        network-uri,
        snap,
        text,
        time,
        unordered-containers,
    mixins:
        relude                          (Relude.Unsafe)
    hs-source-dirs:
        test
    build-tool-depends:
        hspec-discover:hspec-discover   ==  2.*
    ghc-options:
        -threaded
--------------------------------------------------------------------------------
